--- a/mib.css
+++ b/mib.css
@@ -19,7 +19,10 @@ i.icon.icon-room {
 }
 
 #footer {
-    background: linear-gradient(rgba(0, 0, 0, 0.247059) 0px, rgba(0, 0, 0, 0.74902) 100%);
+    background: linear-gradient(to bottom,rgba(0, 0, 0, 0.25) 0,rgba(0, 0, 0, 0.75) 100%);
+}
+#footer {
+    background: linear-gradient(to bottom,rgba(0, 0, 0, 0.25) 0,rgba(0, 0, 0, 0.75) 100%);
 }
 #footer {
     z-index: 90;
@@ -28,4 +31,9 @@ i.icon.icon-room {
     -webkit-box-shadow: inset 0 2px 0 -1px #0A0A0A;
     -moz-box-shadow: inset 0 2px 0 -1px #0A0A0A;
     box-shadow: inset 0 2px 0 -1px #0A0A0A;
+}
+#footer, #playlist-button {
+    position: absolute;
+    left: 0;
+    height: 54px;
 }
