--- a/mib.css
+++ b/mib.css
@@ -18,11 +18,11 @@ i.icon.icon-room {
     background-size: 65%;
 }
 
-.badge-box.clickable {
+/**.badge-box.clickable {
     display: none;
 }
 .cm.message.id-4080795.role-host.role-none.role-none {
     background-image: url(https://pbs.twimg.com/profile_images/678312075379220480/sLXMB7jr_normal.jpg);
     background-repeat: no-repeat;
     background-position: 7px 7px;
-}
+}**/
