--- a/mib.css
+++ b/mib.css
@@ -22,10 +22,18 @@ i.icon.icon-room {
     display: none;
 }
 .cm.message.id-4080795.role-host.role-none.role-none {
-    background-image: url(https://pbs.twimg.com/profile_images/678312075379220480/sLXMB7jr_normal.jpg);
+    background-image: url(https://s.gravatar.com/avatar/6b339b1d098965c7496e3b7e58573962?s=80);
     background-repeat: no-repeat;
     background-position: 7px 7px;
-}**/
+}
+
+
+
+
+
+
+
+**/
 
 #chat .emote .text {
     font-family: 'Open Sans',sans-serif;
