--- a/mib.css
+++ b/mib.css
@@ -39,7 +39,7 @@ i.icon.icon-room {
     font-family: 'Open Sans',sans-serif;
 }
 #chat-messages .text {
-    font-family: 'Comic Sans';
+    font-family: 'Comic Sans',sans-serif;
 }
 
 #woot.selected {
