--- a/mib.css
+++ b/mib.css
@@ -61,6 +61,10 @@ i.icon.icon-room {
     background-size: 65%;
 }
 
+#chat .from {
+text-shadow: 0px 0px 10px #ac76ff;
+}
+
 #chat .emote .text {
     font-family: 'Open Sans',sans-serif;
 }
