--- a/mib.css
+++ b/mib.css
@@ -1,45 +1,62 @@
-/**.badge-box.clickable {
+.badge-box.clickable {
     display: none;
 }
 
-http://i.imgur.com/Ht8aNc5.png?1 -- emblema molde
-
+/**http://i.imgur.com/Ht8aNc5.png?1 -- emblema molde **/
+/*shadow*/
 .cm.message.id-4080795.role-host.role-none.role-none {
     background-image: url(https://s.gravatar.com/avatar/6b339b1d098965c7496e3b7e58573962?s=80);
     background-repeat: no-repeat;
-    background-position: 7px 7px;
+    background-position: 5px 5px;
+    background-size: 35px;
 }
-
+/*duda*/
 .cm.message.id-xxxxx.role-host.role-none.role-none {
     background-image: url(duda);
     background-repeat: no-repeat;
-    background-position: 7px 7px;
+    background-position: 5px 5px;
+    background-size: 35px;
 }
-
-.cm.message.id-1380997.role-host.role-none.role-none {
-    background-image: url(away);
-    background-repeat: no-repeat;
-    background-position: 7px 7px;
-}
-
+/*sabota*/
 .cm.message.id-3851265.role-host.role-none.role-none {
-    background-image: url(sabota);
+    background-image: url(http://i.imgur.com/DHoUE4d.jpg?1);
     background-repeat: no-repeat;
-    background-position: 7px 7px;
+    background-position: 5px 5px;
+    background-size: 35px;
 }
-vzack
+/*vzack*/
 .cm.message.id-4371581.role-host.role-none.role-none {
     background-image: url(http://image.prntscr.com/image/7cc4df7a823c405fb372de83140b52fc.png);
     background-repeat: no-repeat;
-    background-position: 7px 7px;
+    background-position: 5px 5px;
+    background-size: 35px;
+}
+/*dig*/
+.cm.message.id-5495125.role-host.role-none.role-none {
+    background-image: url(http://i.imgur.com/DtznPYN.jpg?1);
+    background-repeat: no-repeat;
+    background-position: 5px 5px;
+    background-size: 35px;
+}
+/*tuskas*/
+.cm.message.id-5594653.role-host.role-none.role-none {
+    background-image: url(http://i.imgur.com/VfMrCMd.jpg?1);
+    background-repeat: no-repeat;
+    background-position: 5px 5px;
+    background-size: 35px;
+}
+/*freddie*/
+.cm.message.id-5007596.role-host.role-none.role-none {
+    background-image: url(http://i.imgur.com/doWh73r.jpg?1);
+    background-repeat: no-repeat;
+    background-position: 5px 5px;
+    background-size: 35px;
 }
 
-.cm.message.id-xxx.role-host.role-none.role-none {
-    background-image: url(nick);
-    background-repeat: no-repeat;
-    background-position: 7px 7px;
-}
-**/
+
+
+
+
 
 #room-host, #room-name {
 left: 105px;
