--- a/mib.css
+++ b/mib.css
@@ -2,51 +2,51 @@
     display: none;
 }
 
-/**http://i.imgur.com/Ht8aNc5.png?1 -- emblema molde **/
+/*http://i.imgur.com/Ht8aNc5.png?1 -- emblema molde */
 /*shadow*/
-.cm.message.id-4080795.role-host.role-none.role-none {
+.cm.message.id-4080795 {
     background-image: url(https://s.gravatar.com/avatar/6b339b1d098965c7496e3b7e58573962?s=80);
     background-repeat: no-repeat;
     background-position: 5px 5px;
     background-size: 35px;
 }
 /*duda*/
-.cm.message.id-xxxxx.role-host.role-none.role-none {
+.cm.message.id-xxxxx {
     background-image: url(duda);
     background-repeat: no-repeat;
     background-position: 5px 5px;
     background-size: 35px;
 }
 /*sabota*/
-.cm.message.id-3851265.role-host.role-none.role-none {
+.cm.message.id-3851265 {
     background-image: url(http://i.imgur.com/DHoUE4d.jpg?1);
     background-repeat: no-repeat;
     background-position: 5px 5px;
     background-size: 35px;
 }
 /*vzack*/
-.cm.message.id-4371581.role-host.role-none.role-none {
+.cm.message.id-4371581 {
     background-image: url(http://image.prntscr.com/image/7cc4df7a823c405fb372de83140b52fc.png);
     background-repeat: no-repeat;
     background-position: 5px 5px;
     background-size: 35px;
 }
 /*dig*/
-.cm.message.id-5495125.role-host.role-none.role-none {
+.cm.message.id-5495125 {
     background-image: url(http://i.imgur.com/DtznPYN.jpg?1);
     background-repeat: no-repeat;
     background-position: 5px 5px;
     background-size: 35px;
 }
 /*tuskas*/
-.cm.message.id-5594653.role-host.role-none.role-none {
+.cm.message.id-5594653 {
     background-image: url(http://i.imgur.com/VfMrCMd.jpg?1);
     background-repeat: no-repeat;
     background-position: 5px 5px;
     background-size: 35px;
 }
 /*freddie*/
-.cm.message.id-5007596.role-host.role-none.role-none {
+.cm.message.id-5007596 {
     background-image: url(http://i.imgur.com/doWh73r.jpg?1);
     background-repeat: no-repeat;
     background-position: 5px 5px;
