--- a/mib.css
+++ b/mib.css
@@ -17,6 +17,13 @@
     background-position: 5px 5px;
     background-size: 35px;
 }
+/*away*/
+.cm.message.id-1380997 {
+    background-image: url(http://i.imgur.com/BTvhqX2.jpg?1);
+    background-repeat: no-repeat;
+    background-position: 5px 5px;
+    background-size: 35px;
+}
 /*sabota*/
 .cm.message.id-3851265 {
     background-image: url(http://i.imgur.com/DHoUE4d.jpg?1);
