--- a/mib.css
+++ b/mib.css
@@ -4,42 +4,42 @@
 
 /*http://i.imgur.com/Ht8aNc5.png?1 -- emblema molde */
 /*shadow*/
-.cm.message.id-4080795 {
+.id-4080795 {
     background-image: url(https://s.gravatar.com/avatar/6b339b1d098965c7496e3b7e58573962?s=80);
     background-repeat: no-repeat;
     background-position: 5px 5px;
     background-size: 35px;
 }
 /*duda*/
-.cm.message.id-xxxxx {
+.id-xxxxx {
     background-image: url(duda);
     background-repeat: no-repeat;
     background-position: 5px 5px;
     background-size: 35px;
 }
 /*away*/
-.cm.message.id-1380997 {
+.id-1380997 {
     background-image: url(http://i.imgur.com/BTvhqX2.jpg?1);
     background-repeat: no-repeat;
     background-position: 5px 5px;
     background-size: 35px;
 }
 /*sabota*/
-.cm.message.id-3851265 {
+.id-3851265 {
     background-image: url(http://i.imgur.com/DHoUE4d.jpg?1);
     background-repeat: no-repeat;
     background-position: 5px 5px;
     background-size: 35px;
 }
 /*vzack*/
-.cm.message.id-4371581 {
+.id-4371581 {
     background-image: url(http://image.prntscr.com/image/7cc4df7a823c405fb372de83140b52fc.png);
     background-repeat: no-repeat;
     background-position: 5px 5px;
     background-size: 35px;
 }
 /*dig*/
-.cm.message.id-5495125 {
+.id-5495125 {
     background-image: url(http://i.imgur.com/DtznPYN.jpg?1);
     background-repeat: no-repeat;
     background-position: 5px 5px;
